--- a/index.html
+++ b/index.html
@@ -1,94 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Web Application</title>
-    <!-- Add any additional meta tags, stylesheets, or scripts here -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Site Loading/title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
+       body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background-color: #333;
+    }
 
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
+    .circle {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      border: 2px solid #FFFFFF;
+      position: relative;
+      animation: rotateInfinity 5s linear infinite;
+    }
 
-        nav {
-            background-color: #444;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-        }
+    .infinity {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100px;
+      height: 50px;
+      background: transparent;
+      border: 2px solid #FFFFFF;
+      border-top-left-radius: 50% 50%;
+      border-bottom-left-radius: 50% 50%;
+      border-top-right-radius: 50% 50%;
+      border-bottom-right-radius: 50% 50%;
+    }
 
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
+    @keyframes rotateInfinity {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
     </style>
-</head>
+  </head>
 
-<body>
-    <header>
-        <h1>Welcome to My Personal Web App</h1>
-    </header>
-
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-        <!-- Add more navigation links as needed -->
-    </nav>
-
-    <main>
-        <section id="home">
-            <h2>Home</h2>
-            <!-- Your home content goes here -->
-        </section>
-
-        <section id="about">
-            <h2>About Me</h2>
-            <!-- Your about content goes here -->
-        </section>
-
-        <section id="projects">
-            <h2>My Projects</h2>
-            <!-- Your projects content goes here -->
-        </section>
-
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <!-- Your contact form or details go here -->
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Abhishek Kumar Yadav</p>
-    </footer>
-</body>
-
+  <body>
+    <div class="circle">
+      <div class="infinity"></div>
+    </div>
+  </body>
 </html>
