--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Site Loading/title>
-    <style>
-       body {
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Loading Site</title>
+  <style>
+    body {
       margin: 0;
       padding: 0;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background-color: #333;
+      background-color: #492E87;
     }
 
     .circle {
       width: 200px;
       height: 200px;
       border-radius: 50%;
-      border: 2px solid #FFFFFF;
+      border: 2px solid #fff;
       position: relative;
       animation: rotateInfinity 5s linear infinite;
     }
@@ -32,7 +32,7 @@
       width: 100px;
       height: 50px;
       background: transparent;
-      border: 2px solid #FFFFFF;
+      border: 2px solid #fff;
       border-top-left-radius: 50% 50%;
       border-bottom-left-radius: 50% 50%;
       border-top-right-radius: 50% 50%;
@@ -47,12 +47,11 @@
         transform: rotate(360deg);
       }
     }
-    </style>
-  </head>
-
-  <body>
-    <div class="circle">
-      <div class="infinity"></div>
-    </div>
-  </body>
+  </style>
+</head>
+<body>
+  <div class="circle">
+    <div class="infinity"></div>
+  </div>
+</body>
 </html>
